--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ authors = ["sushmitafuse <sushmita@fusemachines.com>", "nischal-fuse  <nischal.m
 [tool.poetry.dependencies]
 python = "^3.8"
 numpy = "^1.20.2"
+black = "^21.4b2"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.9.1"
+pre-commit = "^2.12.1"
 
 
 [build-system]
