--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["sushmitafuse <sushmita@fusemachines.com>", "nischal-fuse  <nischal.m
 python = "^3.8"
 numpy = "^1.20.2"
 black = "^21.4b2"
+Flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.1"
