--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 numpy = "^1.20.2"
 black = "^21.4b2"
 Flask = "^1.1.2"
+Flask-PyMongo = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.1"
