--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["sushmitafuse <sushmita@fusemachines.com>", "nischal-fuse  <nischal.m
 
 [tool.poetry.dependencies]
 python = "^3.8"
-numpy = "^1.20.2"
+numpy = "1.19.5"
 black = "^21.4b2"
 Flask = "^1.1.2"
 Flask-PyMongo = "^2.3.0"
+tensorflow = "^2.4.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.1"
