--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ black = "^21.4b2"
 Flask = "^1.1.2"
 Flask-PyMongo = "^2.3.0"
 tensorflow = "^2.4.1"
+sentencepiece = "^0.1.95"
+tensorflow-hub = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.1"
