--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ Flask-PyMongo = "^2.3.0"
 tensorflow = "^2.4.1"
 sentencepiece = "^0.1.95"
 tensorflow-hub = "^0.12.0"
+fastapi = "^0.63.0"
+uvicorn = "^0.13.4"
+motor = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.1"
