--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,22 @@
+exclude: 'docs|node_modules|migrations|.git|.tox'
+default_stages: [commit]
+fail_fast: true
+
 repos:
-  - repo: https://github.com/ambv/black
-    rev: stable
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.0.1
     hooks:
-      - id: black
-        language_version: python
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
+        args: ['--maxkb=4096'] 
+    -   id: check-ast
+-   repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.3.0
     hooks:
-      - id: flake8
+      - id: insert-license
+-   repo: https://github.com/ambv/black
+    rev: 22.8.0
+    hooks:
+    - id: black
+      language_version: python3.10
